se muestran los primeros 2 numeros seleccionados

--- a/source/views/home/home.ejs
+++ b/source/views/home/home.ejs
@@ -2,44 +2,46 @@
 
 <body>
 
-    <%- include("../partials/header.ejs")  %>
+    <!-- <%- include("../partials/header.ejs")  %> -->
 
     <main>
-        <h1>PAGINA NUEVA</h1>
+        
         
         <section class="game">
-            <h2>Memory Game</h2>
-            
+            <h1>Memory Game</h1>
             <table>
                 <tr>
-                    <td><button id="0">asd</button></td>
-                    <td><button id="1">asd</button></td>
-                    <td><button id="2">asd</button></td>
-                    <td><button id="3">asd</button></td>
+                    <td><button id="0" class="btn"></button></td>
+                    <td><button id="1" class="btn"></button></td>
+                    <td><button id="2" class="btn"></button></td>
+                    <td><button id="3" class="btn"></button></td>
                 </tr>
                 <tr>
-                    <td><button id="4">asd</button></td>
-                    <td><button id="5">asd</button></td>
-                    <td><button id="6">asd</button></td>
-                    <td><button id="7">asd</button></td>
+                    <td><button id="4" class="btn"></button></td>
+                    <td><button id="5" class="btn"></button></td>
+                    <td><button id="6" class="btn"></button></td>
+                    <td><button id="7" class="btn"></button></td>
                 </tr>
                 <tr>
-                    <td><button id="8">asd</button></td>
-                    <td><button id="9">asd</button></td>
-                    <td><button id="10">asd</button></td>
-                    <td><button id="11">asd</button></td>
+                    <td><button id="8" class="btn"></button></td>
+                    <td><button id="9" class="btn"></button></td>
+                    <td><button id="10" class="btn"></button></td>
+                    <td><button id="11" class="btn"></button></td>
                 </tr>
                 <tr>
-                    <td><button id="12">asd</button></td>
-                    <td><button id="13">asd</button></td>
-                    <td><button id="14">asd</button></td>
-                    <td><button id="15">asd</button></td>
+                    <td><button id="12" class="btn"></button></td>
+                    <td><button id="13" class="btn"></button></td>
+                    <td><button id="14" class="btn"></button></td>
+                    <td><button id="15" class="btn"></button></td>
                 </tr>
             </table>
-
         </section>
 
-        <section class="stats"></section>
+        <section class="stats">
+            <h2 class="info success">Aciertos: 0</h2>
+            <h2 class="info time">Tiempo: 30 seg</h2>
+            <h2 class="info moves">Movimientos: 0</h2>            
+        </section>
         
     </main>
     
