--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,5 +14,60 @@
 }
 
 body{
-    background-color: #bdbdbd;
+    background: rgb(238,152,190);
+    background: radial-gradient(circle, rgba(238,152,190,1) 0%, rgba(130,180,238,1) 100%);
+    color: #eee;
 }
+
+main {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    padding: 1rem;
+}
+
+h1{
+    text-align: center;
+    font-size: 2rem;
+    padding: 1rem;
+}
+
+.game{
+    background-color: rgba(255, 255, 255, .2);
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+.game button {
+    height: 100px;
+    width: 100px;
+    font-size: 40px;
+    color: #FFF;
+    font-weight: bold;
+    border-radius: 5px;
+    border: none;
+    margin: 2px;
+}
+
+.game button:hover{
+    cursor: pointer;
+}
+
+.stats{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, .2);
+    height: 300px; 
+    width: 250px; 
+    border-radius: 5px;
+    margin-left: 1rem;
+}
+
+.info{
+    margin: auto;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+
