--- a/source/views/home/home.ejs
+++ b/source/views/home/home.ejs
@@ -38,9 +38,9 @@
         </section>
 
         <section class="stats">
-            <h2 class="info success">Aciertos: 0</h2>
-            <h2 class="info time">Tiempo: 30 seg</h2>
-            <h2 class="info moves">Movimientos: 0</h2>            
+            <h2 class="info hits">Hits: 0</h2>
+            <h2 class="info time">Time: 30 seg</h2>
+            <h2 class="info moves">Moves: 0</h2>            
         </section>
         
     </main>
