ruta para volver a portfolio

--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -1,3 +1,10 @@
 <footer>
-    made with ♥ by <a href="https://github.com/ffran-acosta">Franco Acosta</a>
+
+    <div class="back">
+        <a class="backIcon" href="/memoryGame/exit"><i class="fa-solid fa-arrow-left"></i></a>
+    </div>
+
+    <div class="by">
+        <a> made with ♥ by <a href="https://github.com/ffran-acosta">Franco Acosta</a>
+    </div>
 </footer>
