--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -5,6 +5,6 @@
     </div>
 
     <div class="by">
-        <a> made with ♥ by <a href="https://github.com/ffran-acosta">Franco Acosta</a>
+        <a> made by <a href="https://github.com/ffran-acosta">Franco Acosta</a>
     </div>
 </footer>
