--- a/source/views/home/home.ejs
+++ b/source/views/home/home.ejs
@@ -2,12 +2,12 @@
 
 <body>
 
-    <!-- <%- include("../partials/header.ejs")  %> -->
+    <%- include("../partials/header.ejs")  %>
 
     <main>
         
         <section class="game">
-            <h1>Memory Game</h1>
+
             <table>
                 <tr>
                     <td><button id="0" class="btn"></button></td>
