--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer>
 
     <div class="back">
-        <a class="backIcon" href="/memoryGame/exit"><i class="fa-solid fa-arrow-left"></i></a>
+        <a class="backIcon" target="_blank" href="/memoryGame/exit"><i class="fa-solid fa-arrow-left"></i></a>
     </div>
 
     <div class="by">
-        <a> made by <a href="https://github.com/ffran-acosta">Franco Acosta</a>
+        <a> made by <a target="_blank" href="https://github.com/ffran-acosta">Franco Acosta</a>
     </div>
 </footer>
