--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -1,7 +1,6 @@
 <footer>
-
     <div class="back">
-        <a class="backIcon" target="_blank" href="/memoryGame/exit"><i class="fa-solid fa-arrow-left"></i></a>
+        <a class="backIcon" target="_blank" href="https://ffran-acosta.up.railway.app/"><i class="fa-solid fa-arrow-left"></i></a>
     </div>
 
     <div class="by">
